--- a/index.html
+++ b/index.html
@@ -7,7 +7,61 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Github User Search App</title>
 </head>
-<body>
+<body class="light-theme">
+    <div class="container">
+        <header class="header">
+            <h1 class="title">devfinder</h1>
+            <div class="theme-selector">
+                <button class="theme-selector-btn">
+                    DARK
+                </button>
+            </div>
+        </header>
+        <form action="" class="search-bar">
+            <span class="search-icon"></span>
+            <input type="search" name="search" placeholder="Search GitHub username…" required>
+            <button class="btn search-btn">Search</button>
+        </form>
+        <div class="card-container">
+            <img src="" alt="" class="profile-pic">
+            <div class="profile-top">
+                <div class="user-infos">
+                    <h2 class="user-name">The Octocat </h2>
+                    <p class="user-address">@octocat</p>
+                </div>
+                <p class="join-date">Joined 25 Jan 2011</p>
+            </div>
+            <p class="bio">This profile has no bio</p>
+            <div class="github-infos-container">
+                <div class="github-infos">
+                    <span class="github-infos-title">Repos</span>
+                    <span class="github-infos-content">8</span>
+                </div>
+                <div class="github-infos">
+                    <span class="github-infos-title">Followers</span>
+                    <span class="github-infos-content">3938</span>
+                </div>
+                <div class="github-infos">
+                    <span class="github-infos-title">Following</span>
+                    <span class="github-infos-content">9</span>
+                </div>
+            </div>
+            <div class="other-infos-container">
+                <div class="other-infos ">
+                    <p class="location">San Francisco</p>
+                </div>
+                <div class="other-infos ">
+                    <p class="twitter">Not Available</p>
+                </div>
+                <div class="other-infos ">
+                    <p class="blog">https://github.blog</p>
+                </div>
+                <div class="other-infos ">
+                    <p class="company">@github</p>
+                </div>
+            </div>
+        </div>
+    </div>
     
 
     <script src="assets/js/app.js"></script>
