Header ve search form tamamlandı. card container stillendirmesine başlanacak.

--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Github User Search App</title>
 </head>
-<body class="light-theme">
+<body>
     <div class="container">
         <header class="header">
             <h1 class="title">devfinder</h1>
             <div class="theme-selector">
                 <button class="theme-selector-btn">
                     DARK
+                    <img src="assets/img/moon.svg" alt="">
                 </button>
             </div>
         </header>
-        <form action="" class="search-bar">
-            <span class="search-icon"></span>
-            <input type="search" name="search" placeholder="Search GitHub username…" required>
+        <form action="" class="search-form">
+            <span class="search-icon">
+                <img src="assets/img/search-icon.svg" alt="">
+            </span>
+            <input class="search-input" type="search" name="search" placeholder="Search GitHub username…" required>
             <button class="btn search-btn">Search</button>
         </form>
         <div class="card-container">
-            <img src="" alt="" class="profile-pic">
+            <img src="assets/img/user-pic.png" alt="" class="profile-pic">
             <div class="profile-top">
                 <div class="user-infos">
                     <h2 class="user-name">The Octocat </h2>
