Github user search app html ve css olarak tamamlandı.

--- a/index.html
+++ b/index.html
@@ -27,40 +27,46 @@
         </form>
         <div class="card-container">
             <img src="assets/img/user-pic.png" alt="" class="profile-pic">
-            <div class="profile-top">
-                <div class="user-infos">
-                    <h2 class="user-name">The Octocat </h2>
-                    <p class="user-address">@octocat</p>
+            <div class="profile-container">
+                <div class="profile-top">
+                    <div class="user-infos">
+                        <h2 class="user-name">The Octocat </h2>
+                        <p class="user-address">@octocat</p>
+                    </div>
+                    <p class="join-date">Joined 25 Jan 2011</p>
                 </div>
-                <p class="join-date">Joined 25 Jan 2011</p>
-            </div>
-            <p class="bio">This profile has no bio</p>
-            <div class="github-infos-container">
-                <div class="github-infos">
-                    <span class="github-infos-title">Repos</span>
-                    <span class="github-infos-content">8</span>
+                <p class="bio">This profile has no bio</p>
+                <div class="github-infos-container">
+                    <div class="github-infos">
+                        <span class="github-infos-title">Repos</span>
+                        <span class="github-infos-content">8</span>
+                    </div>
+                    <div class="github-infos">
+                        <span class="github-infos-title">Followers</span>
+                        <span class="github-infos-content">3938</span>
+                    </div>
+                    <div class="github-infos">
+                        <span class="github-infos-title">Following</span>
+                        <span class="github-infos-content">9</span>
+                    </div>
                 </div>
-                <div class="github-infos">
-                    <span class="github-infos-title">Followers</span>
-                    <span class="github-infos-content">3938</span>
-                </div>
-                <div class="github-infos">
-                    <span class="github-infos-title">Following</span>
-                    <span class="github-infos-content">9</span>
-                </div>
-            </div>
-            <div class="other-infos-container">
-                <div class="other-infos ">
-                    <p class="location">San Francisco</p>
-                </div>
-                <div class="other-infos ">
-                    <p class="twitter">Not Available</p>
-                </div>
-                <div class="other-infos ">
-                    <p class="blog">https://github.blog</p>
-                </div>
-                <div class="other-infos ">
-                    <p class="company">@github</p>
+                <div class="other-infos-container">
+                    <div class="other-infos ">
+                        <img src="assets/img/pin.svg" alt="">
+                        <p class="location other-infos-content">San Francisco</p>
+                    </div>
+                    <div class="other-infos ">
+                        <img src="assets/img/twitter.svg" alt="">
+                        <p class="twitter other-infos-content">Not Available</p>
+                    </div>
+                    <div class="other-infos ">
+                        <img src="assets/img/url.svg" alt="">
+                        <p class="blog other-infos-content">https://github.blog</p>
+                    </div>
+                    <div class="other-infos ">
+                        <img src="assets/img/building.svg" alt="">
+                        <p class="company other-infos-content">@github</p>
+                    </div>
                 </div>
             </div>
         </div>
