Github user search app js olarak tamamlandı. kullanıcının input a yazdığı değer alınarak fetchGitHub isimli fonksiyona gönderilerek bir fetch işlemi yapıldı. buradan alınan bilgiye göre kişi var ise bir sonraki aşamaya yok ise input ta bir error mesajı verildi. Kullanıcı bilgisi alınarak oluşturulan html bloğuna eşitlendi ve içine bilgiler yazdırıldı. sağ üstte yer alacak katılım tarihi için kullanıcıya daha okunabilir bir bilgi verebilmek için date objesi kullanıldı ve aylar için ise bir months dizisi oluşturuldu. date ten gelen tarih sayısına göre denk gelecek ay belirlenip ekrana yazdırma işlemi yapıldı. Kullanıcıdan alınan bazı bilgilerin olmaması dahilinde ternary operatörü kullanılarak Bilginin varlığına ve yokluğuna göre değişken içerik verildi. Dark Tema yapılacak...

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <img src="assets/img/search-icon.svg" alt="">
             </span>
             <input class="search-input" type="search" name="search" placeholder="Search GitHub username…" required>
+            <p class="error d-none">No results</p>
             <button class="btn search-btn">Search</button>
         </form>
         <div class="card-container">
