Search'te autofill durumunda kötü bir background rengi oluşuyordu bunu engellemek için autofill pseudo class ında bazı değişiklikler yapıldı. Console.log'lar temizlendi.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="title">devfinder</h1>
+            <h1 class="title">created by Barış</h1>
             <div class="theme-selector">
                 <button class="theme-selector-btn">
                     DARK
