--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/dark-theme.js" defer></script>
+    <script src="assets/js/theme-selector.js" defer></script>
     <title>Github User Search App</title>
 </head>
 <body>
